err/bxa.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bxa'...
Listing './lib/python3.5/site-packages/bxa/sherpa'...
Compiling './lib/python3.5/site-packages/bxa/sherpa/__init__.py'...
***   File "./lib/python3.5/site-packages/bxa/sherpa/__init__.py", line 63
    print 'Exception in log_likelihood function: ', e
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bxa/sherpa/background2.py'...
***   File "./lib/python3.5/site-packages/bxa/sherpa/background2.py", line 140
    print 'press ENTER to continue >> ',
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bxa/sherpa/background3.py'...
***   File "./lib/python3.5/site-packages/bxa/sherpa/background3.py", line 36
    print '  groups', i,j,n
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bxa/sherpa/rebinnedmodel.py'...
***   File "./lib/python3.5/site-packages/bxa/sherpa/rebinnedmodel.py", line 88
    print 'loaded from %s' % filename
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bxa/xspec'...
Compiling './lib/python3.5/site-packages/bxa/xspec/__init__.py'...
***   File "./lib/python3.5/site-packages/bxa/xspec/__init__.py", line 111
    print 'Exception in log_likelihood function: ', e
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bxa/xspec/gof.py'...
***   File "./lib/python3.5/site-packages/bxa/xspec/gof.py", line 25
    print ' gen?', k, len(cpart), nchoices
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bxa/xspec/plot.py'...
***   File "./lib/python3.5/site-packages/bxa/xspec/plot.py", line 86
    print '1dimensional only. Set the D environment variable D=2 to force'
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bxa/xspec/priors.py'...
***   File "./lib/python3.5/site-packages/bxa/xspec/priors.py", line 22
    print '  uniform prior for %s between %f and %f ' % (par.name, pmin, pmax)
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bxa-2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
